Refactor controllers and services to use UUID for IDs